desenv_tests/test-assets/struct/failure/prefix_value_not_string.rs
use desenv::Desenv;

#[derive(Desenv)]
#[desenv(prefix = '_')]
struct Config {
    field: String
}

fn main(){}